Use border bottom instead of underline to avoid the underline too close problem.

--- a/modules/html/style.css
+++ b/modules/html/style.css
@@ -105,8 +105,8 @@ p.q, p.q1, p.q2 {
 
 /* underline */
 span.pn {
-  /*border-bottom: 1px solid #000;*/
-  text-decoration: underline;
+  border-bottom: 1px solid #000;
+  /*text-decoration: underline;*/
   /*white-space: nowrap;*/
 }
 
